--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       {
         str += "<td>" + i + "; " + j + "</td>";
       }
-      str += </tr>
+      str += "</tr>";
     }
     
     str += "</table>";
