--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </body>
 
 <script>
-  var grid = document.GetElementById("grid")
+  var grid = document.getElementById("grid")
   
   function populateGrid( col, row, grid )
   {
