--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<style>
+table, th, td {
+  border: 1px solid black;
+}
+
+th, td {
+  padding: 10px;
+}
+</style>
+
 <body>
   <div id="grid">
     HELLO WORLD
